--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,24 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Playfair Display', serif;
+  color: white;
 }
 
 #root,
 #root > div {
   height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+@font-face {
+  font-family: 'AmsiPro';
+  src: local('AmsiPro'), url(./fonts/AmsiPro-Bold.ttf) format('ttf');
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'AmsiPro-Bold', Helvetica, sans-serif;
 }
