--- a/src/CounterInfo/index.css
+++ b/src/CounterInfo/index.css
@@ -1,11 +1,11 @@
 .counter-info {
   height: 100vh;
-  padding-top: 40px;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .counter-info .logo-container {
