--- a/src/FeedItem/index.css
+++ b/src/FeedItem/index.css
@@ -14,6 +14,7 @@
 }
 
 .feed-item .feed-item-info {
+  align-items: center;
   display: flex;
   flex-direction: row;
   padding: 10px 0;
@@ -40,4 +41,7 @@
 .feed-item .feed-item-info .time {
   font-size: 14px;
   color: rgba(0, 0, 0, 0.5)
+}
+.like-shares {
+  align-self: flex-end;
 }
