--- a/src/FeedItem/index.css
+++ b/src/FeedItem/index.css
@@ -5,6 +5,8 @@
   padding: 8px;
   margin-bottom: 20px;
   width: 100%;
+  font-family: Helvetica, sans-serif;
+  color: rgba(0, 0, 0, 0.84);
 }
 
 .feed-item .feedback-item-image {
@@ -18,8 +20,12 @@
   display: flex;
   flex-direction: row;
   padding: 10px 0;
-  font-family: Helvetica, sans-serif;
-  color: rgba(0, 0, 0, 0.84);
+}
+
+.feed-item .feed-item-content {
+  line-height: 1.5em;
+  margin-top: 6px;
+  margin-bottom: 4px;
 }
 
 .feed-item .feed-item-info .avatar{
@@ -42,6 +48,44 @@
   font-size: 14px;
   color: rgba(0, 0, 0, 0.5)
 }
-.like-shares {
-  align-self: flex-end;
+
+.feed-item .image-interaction {
+  display: flex;
+  align-items: center;
+}
+
+.feed-item .image-interaction .image-interaction-text {
+  display: flex;
+  flex-direction: column;
+}
+
+.feed-item .image-interaction .image-interaction-text .nick {
+  margin-bottom: 6px;
+}
+
+.feed-item .image-interaction .image-interaction-text .time {
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.5)
+}
+
+.feed-item .image-like-container {
+  width: 60px;
+  height: 60px;
+  position: relative;
+  margin-right: 12px;
+}
+
+.feed-item .image-like-container-img {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 3px;
+}
+
+.feed-item .image-like-container-illustration {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 30px;
 }
