--- a/src/BarSelectionView/index.css
+++ b/src/BarSelectionView/index.css
@@ -22,6 +22,7 @@
 .bar-item-container > a {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.84);
+  cursor: pointer;
 }
 
 .bar-item-container:hover {
